changed a few comments

--- a/newspaperExample.tex
+++ b/newspaperExample.tex
@@ -189,9 +189,11 @@ Sony is expected to release the PS5 (if it is even called that) late next year. 
 
 \begin{center}
 \headline{Jokes, and Memes}
+%I am sorry for the stale and lame memes
+
 \includegraphics[height=5.5cm]{m1.jpeg}
 \includegraphics[height=5.5cm]{m2.jpeg}
-
+          
 \includegraphics[height=6cm]{m3.jpeg}
 \includegraphics[height=6cm]{m4.jpeg}
 \end{center}
