--- a/newspaperExample.tex
+++ b/newspaperExample.tex
@@ -44,7 +44,7 @@
           %  \includegraphics[scale=0.3]{fps}
         % \scalerel*{\includegraphics{fps}}{f}
             FPS Eagles:   
-         \hfill  \includegraphics[height=\fontcharht\font`\B]{cfps} 
+       %  \hfill  \includegraphics[height=\fontcharht\font`\B]{cfps.png} 
       }
 \SetHeaderName{FPS Eagles}
 \SetPaperLocation{
@@ -87,7 +87,7 @@
 
 Researchers recently probed fish-life in the deepest parts of our ocean and found something shocking. In their digestive tracts were quantities of microplastics. The study raised several concerns. Finding microplastics at such a depth means that even the deepest parts of our oceans are not safe from our litter.More and more plastic is thrown into our oceans every day with some estimates ranging between 4.8~12.7 million tonnes per Annum.\newline Indeed microplastics are quite dangerous as the ones found in such fish could easily transfer up the food chain and into our food supply, causing a plethora of adverse health effects.
 
-Students in the SLC in FPS realised this crisis, and thus, to prevent it, worked with the admin to ban the sale of all plastic bottles in the canteen. The ban, which was put in place earlier this term has reduced the plastic bottle waste OLDC generates to \boldsymbol{0}. In place of this, students can now refill their bottles at a lower rate from the canteen's water filter.
+Students in the SLC in FPS realised this crisis, and thus, to prevent it, worked with the admin to ban the sale of all plastic bottles in the canteen. The ban, which was put in place earlier this term has reduced the plastic bottle waste OLDC generates to $\boldsymbol{0}$. In place of this, students can now refill their bottles at a lower rate from the canteen's water filter.
 
 It is hoped that our contribution, whilst small, will make a difference by discouraging the use of disposable plastics and will a step on the long road towards a green future. 
 
@@ -189,13 +189,11 @@ Sony is expected to release the PS5 (if it is even called that) late next year. 
 
 \begin{center}
 \headline{Jokes, and Memes}
-%I am sorry for the stale and lame memes
+%\includegraphics[height=5.5cm]{m1.jpeg}
+%\includegraphics[height=5.5cm]{m2.jpeg}
 
-\includegraphics[height=5.5cm]{m1.jpeg}
-\includegraphics[height=5.5cm]{m2.jpeg}
-          
-\includegraphics[height=6cm]{m3.jpeg}
-\includegraphics[height=6cm]{m4.jpeg}
+%\includegraphics[height=6cm]{m3.jpeg}
+%\includegraphics[height=6cm]{m4.jpeg}
 \end{center}
 
 \pagebreak
