Added article word limits

--- a/template/newspaper.tex
+++ b/template/newspaper.tex
@@ -74,9 +74,7 @@
 
 %                               1ST PAGE
 
-\headline{MAIN}\textbf{by}
-
-
+\headline{MAIN}\textbf{by} % 200~250 words
 
 
 %do \closearticle for that double line bar
@@ -92,7 +90,7 @@ Pic of main goes here
 \includegraphics[scale=0.1]{w}
 
 
-\headline{Side 1}\textbf{by}
+\headline{Side 1}\textbf{by} % 140~150 words
 
 
 
@@ -105,14 +103,14 @@ Pic of main goes here
 
 %                               2ND PAGE 
 
-\headline{Editorial}\textbf{by}
+\headline{Editorial}\textbf{by} % 350 words
 
 
 
 \closearticle
 
 \begin{multicols}{2}
-\headline{Sports}
+\headline{Sports} % 130 words
 
 
 
@@ -140,12 +138,12 @@ Pic of main goes here
 
 \headline{What's Up With Tech?}
 \begin{multicols}{2}
-    \headline{tech 1}
+    \headline{tech 1} % 100 words
 
 %\closearticle
 
 
-\headline{tech 2} 
+\headline{tech 2} % 100 words
 
 %\vfill
 %\closearticle
@@ -169,7 +167,7 @@ Memes here
 
 \begin{multicols}{2}
 
-\headline{misc 1}
+\headline{misc 1} % 190 words
 
 
 
@@ -180,7 +178,7 @@ Memes here
 Image for misc 1 here
 
 
-\headline{Misc 2?}
+\headline{Misc 2?} % 190 words
 
 %\includegraphics[scale=1]{prodigy}
 Image for misc 2 here
