--- a/Issue 1/newspaper.tex
+++ b/Issue 1/newspaper.tex
@@ -26,7 +26,7 @@
 
 % TODO: Change the font to Times New Roman
 
-\setlength{\parindent}{2pt}
+% \setlength{\parindent}{2pt}
 %To get rid of indents 
 
 
@@ -63,7 +63,7 @@
 
 % Metadata you should change
 
-\date{January 2020}
+\date{February 2020}
 \currentvolume{1}
 \currentissue{1} 
 
@@ -75,11 +75,11 @@
 
 \headline{PLASTIC}\textbf{by Awab Ahmed Qureshi XI-D}
 
-Researchers recently probed fish-life in the deepest parts of our ocean and found something shocking. In their digestive tracts were quantities of microplastics. The study raised several concerns. Finding microplastics at such a depth means that even the deepest parts of our oceans are not safe from our litter.More and more plastic is thrown into our oceans every day with some estimates ranging between 4.8~12.7 million tonnes per Annum.\newline Indeed microplastics are quite dangerous as the ones found in such fish could easily transfer up the food chain and into our food supply, causing a plethora of adverse health effects.
+Researchers recently probed fish-life in the deepest parts of our ocean and found something shocking. In their digestive tracts were quantities of micro-plastics. The study raised several concerns. Finding micro-plastics at such a depth means that even the deepest parts of our oceans are not safe from our litter.More and more plastic is thrown into our oceans every day with some estimates ranging between 4.8~12.7 million tonnes per Annum.\newline Indeed micro-plastics are quite dangerous as the ones found in such fish could easily transfer up the food chain and into our food supply, causing a plethora of adverse health effects.
 
-Students in the SLC in FPS realised this crisis, and thus, to prevent it, worked with the admin to ban the sale of all plastic bottles in the canteen. The ban, which was put in place earlier this term has reduced the plastic bottle waste OLDC generates to $\boldsymbol{0}$. In place of this, students can now refill their bottles at a lower rate from the canteen's water filter.
+Students in the SLC in FPS realised this crisis, and thus, to prevent it, worked with the admin to ban the sale of all single-use plastic bottles in the canteen. The ban, which was put in place earlier this term has reduced the plastic bottle waste OLDC generates to $\boldsymbol{0}$. In place of this, students can now refill their bottles at a lower rate from the canteen's water filter.
 
-It is hoped that our contribution, whilst small, will make a difference by discouraging the use of disposable plastics and will a step on the long road towards a green future. 
+It is hoped that our contribution, whilst small, will make a difference by discouraging the use of disposable plastics and will be a step on the long road towards a green future. 
 
 
 
@@ -90,7 +90,7 @@ It is hoped that our contribution, whilst small, will make a difference by disco
 
 \includegraphics[scale=0.2]{w}
 
-\includegraphics[scale=0.5]{noplastic}
+\includegraphics[scale=0.45]{noplastic}
 
 \includegraphics[scale=0.1]{w}
 
@@ -103,9 +103,9 @@ It is hoped that our contribution, whilst small, will make a difference by disco
 \headline{Happiness fest}\textbf{by Laiba Abid XI-C}
 
 
-To mark the end of the term, and to help students unwind from the tiring exams, the SLC and school organised The Happiness Fest after the paper review. The event featured numerous activities for students to take part in, such as karaoke, a swinging ship and a rifle game. Music played throughout the event and pupils could request and dedicate any song to anyone of their choosing. The KCC stall was also present, selling a variety of accessories to raise money for charity. Along with all this there was also a food street in the parking lot area. Several restaurants' stalls were present offering many food options to appease everyone’s appetites. The day culminated in a performance by our talented young musicians, followed by an inter-house football tournament. 
+To mark the end of the term, and to help students unwind from the tiring exams, the SLC and school organised The Happiness Fest after the paper review. The event featured numerous activities for students to take part in, such as karaoke, and a swinging ship. Music played throughout the event and pupils could request and dedicate any song to anyone of their choosing. The KCC stall sold a variety of accessories to raise money for charity. Along with all this there was also a food street in the parking lot. Several stalls were present offering many food options to appease everyone’s appetites. The day culminated in a performance by our talented young musicians, followed by an inter-house football tournament. 
 
-Overall it was a fun-filled event, and a nice chance to relax with friends.
+Overall it was a fun-filled event, and a great opportunity to relax with friends.
 
 
 
@@ -135,9 +135,9 @@ A viable approach to all this is education. Together, as a single person or neig
 \headline{Sports: Sarah Sajjad}
 
 
-Sarah Sajjad is an ambitious champion who represents in the National Olympic Games held in Peshawar, and has impressed us once again as the youngest throwball athlete of the event. This is not the first time Sara has made FPS proud as the outstanding athletic virtuoso also made us all proud last year in inter-school competitions. 
+Sarah Sajjad is an ambitious champion who represented us in the National Olympic Games held in Peshawar, and has impressed us once again as the youngest throw-ball athlete of the event. This is not the first time Sara has made FPS proud as the outstanding athletic virtuoso also made us all proud last year in inter-school competitions. 
 
-She left for Peshawar, along with her mother for the nerve wrecking journey, on Nov. 8th. The team started their first match with Balochistan, winning it with a lead of 20 points. Among the 6 games that were held: two qualifying matches, two semi-finals and two finals; Sindh won all 6 of them. Sara honored us all, as well as her family, and most importantly her parents, with her trophy and gold medal.  
+She left for Peshawar, along with her mother, on Nov. 8th. The team started their first match with Balochistan, winning it with a lead of 20 points. Among the 6 games that were held: two qualifying matches, two semi-finals and two finals; Sindh won all 6 of them. Sara honored us all, as well as her family, and most importantly her parents, with her trophy and gold medal.  
 
 
 
@@ -164,20 +164,20 @@ She left for Peshawar, along with her mother for the nerve wrecking journey, on 
 \headline{What's Up With Tech?}
 \begin{multicols}{2}
     \headline{Xbox series X}
-We have been waiting to find out about the Xbox's replacement for a while now, but details have been kept under wraps. That is, until now, as Microsoft has released not only details, but even pictures.
+We have been waiting to find out about the xbox replacement for a while now, but details have been kept under wraps. That is, until now, as Microsoft has released not only details, but even pictures.
 
-The new console will include a high-speed solid-state hard drive (SSD) to lessen game load times, and a powerful new chipset to make your games look even better. Its polarising shape has also generated buzz, with people remarking how it resembles a PC more than a console.
+The new console will include a high-speed solid-state hard drive (SSD) to lessen game load times, and a powerful new chip-set to make your games look even better. Its polarising shape has also generated buzz, with people remarking how it resembles a PC more than a console.
 
 Microsoft is expected to release the "Xbox series X" late in the year for around £600.
 %\closearticle
 
 
 \headline{Half-Life: Alyx}
-    Valve has announced a new Half-Life game in over a decade. The news shocked fans, who thought they'd never see another installment in the series again. Many memes were popularised as fans grew restless such as the famous "Half-Life 3 confirmed" and "Valve can't count to 3".
-    
-    The game will be entirely in Virtual Reality, causing many to hope that it will bring VR headsets to general consumer's homes and pave the way for a new era. 
-    
-    Half-Life: Alyx releases in March next year and is likely to generate more hype and possibly break the internet at release.
+Valve has announced a new Half-Life game in over a decade. The news shocked fans, who thought they'd never see another instalment in the series again. Many memes were popularised as fans grew restless such as the famous "Half-Life 3 confirmed" and "Valve can't count to 3".
+
+The game will be entirely in Virtual Reality, causing many to hope that it will bring VR headsets to general consumer's homes and pave the way for a new era. 
+
+Half-Life: Alyx releases in March and is likely to generate more hype and possibly break the internet at release.
 
 %\vfill
 %\closearticle
@@ -187,11 +187,12 @@ Microsoft is expected to release the "Xbox series X" late in the year for around
 
 \begin{center}
 \headline{Jokes, and Memes}
-\includegraphics[height=5.5cm]{m1.jpeg}
-\includegraphics[height=5.5cm]{m2.jpeg}
+\includegraphics[height=5cm]{m1.jpeg}
+\includegraphics[height=5cm]{m4.jpeg}
 
-\includegraphics[height=6cm]{m3.jpeg}
-\includegraphics[height=6cm]{m4.jpeg}
+\includegraphics[height=6cm]{m2.jpeg}
+% \includegraphics[height=5.5cm]{m3.jpeg}
+
 \end{center}
 
 \pagebreak
@@ -203,18 +204,20 @@ Microsoft is expected to release the "Xbox series X" late in the year for around
 
 \headline{What about the Grammy's?}
 
-The Grammy's are the music industry's most prestigious award and in the past have been won by greats such as Daft Punk, Taylor Swift, Adèle, Bruno Mars, and others. 
+The Grammy's are the music industry's most prestigious award and in the past have been won by greats such as Daft Punk, Taylor Swift, Adèle, Bruno Mars, and others. The award's iconic shape is that of a grammophone playing a vinyl record and is presented in many different categories such as best album, song, new artist and lifetime achievement among others.
 
-The award's iconic shape is that of a grammophone playing a vinyl record and is presented in many different categories such as best album, song, new artist and lifetime achievement among others.
+This year, the Grammy's faced another controversy as ten days before the awards the Recording Academy placed Dugan on administrative leave, accusing her of vaguely defined “misconduct” against a senior female employee, which seemingly amounted to some possible verbal abuse. Four days later, Dugan’s attorneys hit back with her bombshell complaint to the EEOC.
 
-The Grammy’s were however entangled in controversy in 2018, after only one women, Alessia Cara, won an award. Asked to respond to the lack of female representation, Recording Academy president Neil Portnow said women needed "to step up." His comments sparked an outrage, and this year’s ceremony rang the changes, with Kacey Musgrave’s space-age country album Golden Hour taking home the main prize, presented by a new female host, Alicia Keys. As she picked up the best new artist trophy, British star Dua Lipa drove home the point, saying:” I guess this year we really stepped up.” Now two years later women are dominating the 2020 nominations. We’ll discover who wins when the 62nd annual Grammy Awards takes place on Sunday, 26th January 2020, hosted again by Alicia Keys.
+But the awards still went on and on Jan. 26, Billie Eilish's "Bad Guy" became the 11th consecutive winner for record of the year to have been a top five hit on the Billboard Hot 100. The feat establishes a new record streak, surpassing the 10 consecutive record of the year champs that doubled as top five hits from Eagles' "Hotel California" in 1977 through Steve Winwood's "Higher Love" in 1986.
 
+
+\vfill
+\includegraphics[scale=0.1]{w}
+
+\includegraphics[scale=0.35]{grammy}
 
 \includegraphics[scale=0.1]{w}
 \vfill
-
-\includegraphics[scale=0.39]{grammy}
-
 
 \headline{Prodigy?}
 
